--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "blood-donors",
-  "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
-  "keywords": [],
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
+    "grunt-bower-task": "^0.3.4",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-coffee": "0.13.0",
     "grunt-contrib-concat": "0.5.1",
@@ -19,10 +16,17 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
+    "jquery": "^2.2.3",
     "rc": "1.0.1",
+    "request": "^2.72.0",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9"
   },
+  "name": "blood-donors",
+  "private": true,
+  "version": "0.0.0",
+  "description": "a Sails application",
+  "keywords": [],
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js"
