--- a/bower.json
+++ b/bower.json
@@ -20,11 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "react": "^15.0.2",
-    "esri": "arcgis-js-api#3.16.0"
-  },
-  "resolutions": {
-    "dojo": "v1.10.4/esri-3.14.0"
+    "react": "^15.0.2"
   }
 
 }
