--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "bootstrap": "^3.3.6",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
-    "grunt-bower-task": "^0.3.4",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-coffee": "0.13.0",
     "grunt-contrib-concat": "0.5.1",
@@ -15,12 +16,16 @@
     "grunt-contrib-watch": "0.5.3",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
+    "grunt-wiredep": "^2.0.0",
     "include-all": "~0.1.6",
     "jquery": "^2.2.3",
     "rc": "1.0.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "request": "^2.72.0",
     "sails": "~0.12.1",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mongo": "^0.10.x"
   },
   "name": "blood-donors",
   "private": true,
@@ -32,10 +37,5 @@
     "start": "node app.js"
   },
   "main": "app.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/rodrigo/blood-donors.git"
-  },
-  "author": "rodrigo",
-  "license": ""
+  "author": "Rodrigo Riquelme <rodrigo.riquelme.e@gmail.com"
 }
