--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "request": "^2.72.0",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.10.x"
+    "sails-mongo": "^0.10.9"
   },
   "name": "blood-donors",
   "private": true,
