--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
+    "barrels": "^1.6.4",
     "bootstrap": "^3.3.6",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
@@ -14,10 +15,12 @@
     "grunt-contrib-less": "1.1.0",
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.5.3",
+    "grunt-mocha-istanbul": "^4.0.2",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "grunt-wiredep": "^2.0.0",
     "include-all": "~0.1.6",
+    "istanbul": "^0.4.3",
     "jquery": "^2.2.3",
     "rc": "1.0.1",
     "react": "^15.0.2",
@@ -25,6 +28,7 @@
     "request": "^2.72.0",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9",
+    "sails-generate-test": "0.0.4",
     "sails-mongo": "^0.11.3"
   },
   "name": "blood-donors",
@@ -40,8 +44,13 @@
   "main": "app.js",
   "author": "Rodrigo Riquelme <rodrigo.riquelme.e@gmail.com",
   "devDependencies": {
-    "mocha": "^2.4.5",
-    "should": "^8.3.1",
-    "supertest": "^1.2.0"
+    "devDependencies": {
+      "istanbul": "^0.3.6",
+      "grunt-mocha-istanbul": "^2.2.0",
+      "barrels": "^1.4.0",
+      "mocha": "*",
+      "should": "*",
+      "superagent": "^1.4.0"
+    }
   }
 }
