--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js",
-    "test": "mocha test/bootstrap.test.js test/integration/**/*.test.js"
+    "test": "make test"
   },
   "main": "app.js",
   "author": "Rodrigo Riquelme <rodrigo.riquelme.e@gmail.com",
